--- a/coffee-house/index.css
+++ b/coffee-house/index.css
@@ -208,28 +208,28 @@ img {
   background-image: url(img/header_and_footer/clock.svg);
 }
 
-.mainbox {
+.enjoy {
   margin-top: 20px;
   border-radius: 40px;
 }
-.mainbox-desc {
+.enjoy-desc {
   max-width: 518px;
   margin-left: 101px;
 }
-.mainbox-desc__title {
+.enjoy-desc__title {
   font-size: 72px;
   font-weight: 600;
   line-height: 1.05;
   margin-bottom: 41px;
 }
-.mainbox-desc__subtitle {
+.enjoy-desc__subtitle {
   color: #B0907A;
   font-variation-settings: "slnt" -10;
 }
-.mainbox-desc__text {
+.enjoy-desc__text {
   margin-bottom: 40px;
 }
-.mainbox-desc__btn {
+.enjoy-desc__btn {
   display: inline-block;
   font-weight: 600;
   color: #403F3D;
@@ -241,14 +241,14 @@ img {
   transform: translateX(-1px);
   padding-left: 79px;
 }
-.mainbox-desc__btn:hover, .mainbox-desc__btn:focus {
+.enjoy-desc__btn:hover, .enjoy-desc__btn:focus {
   padding: 20px 88px 20px 68px;
   padding-left: 69px;
 }
-.mainbox-desc__btn:hover::after, .mainbox-desc__btn:focus::after {
+.enjoy-desc__btn:hover::after, .enjoy-desc__btn:focus::after {
   opacity: 1;
 }
-.mainbox-desc__btn::after {
+.enjoy-desc__btn::after {
   transition: opacity 0.5s;
   position: absolute;
   left: 120px;
@@ -455,11 +455,11 @@ img {
 }
 
 /*Block-pages*/
-.mainbox, .favorite-coffee {
+.enjoy, .favorite-coffee {
   padding: 100px 0;
 }
 
-.mainbox {
+.enjoy {
   background-image: url(img/main/hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
