--- a/coffee-house/menu.scss
+++ b/coffee-house/menu.scss
@@ -117,6 +117,12 @@
                 border: 1px solid $border-light;
                 height: 504px;
                 position: relative;
+                cursor: pointer;
+                &:hover, &:focus {
+                    .grid-coffee-item-box__pic {
+                        transform: translate(-50%,-50%) scale(1);
+                    }
+                }
                 &-box {
                     overflow: hidden;
                     position: relative;
@@ -130,9 +136,6 @@
                         left: 50%;
                         transform: translate(-50%,-50%) scale(1.1);
                         transition: transform 0.5s;
-                        &:hover, &:focus {
-                            transform: translate(-50%,-50%) scale(1);
-                        }
                     }
                 }
                 &__type {
