fix: disable hover on active tab in menu

--- a/coffee-house/menu.scss
+++ b/coffee-house/menu.scss
@@ -70,6 +70,10 @@
                 }
             }
             &--active {
+                &:hover, &:focus {
+                    user-select: none;
+                    cursor: default;
+                }
                 svg {
                     fill: transparent;
                     .circle-stroke {
