--- a/coffee-house/menu.css
+++ b/coffee-house/menu.css
@@ -268,6 +268,10 @@ img {
 .menu-tab__btn svg:hover .circle-img, .menu-tab__btn svg:hover .text {
   fill: #E1D4C9;
 }
+.menu-tab__btn--active:hover, .menu-tab__btn--active:focus {
+  user-select: none;
+  cursor: default;
+}
 .menu-tab__btn--active svg {
   fill: transparent;
 }
