fix: disable color in body and add it to changed text

--- a/coffee-house/footer.scss
+++ b/coffee-house/footer.scss
@@ -57,6 +57,7 @@
 			line-height: 1.25;
 			margin-top: 33px;
 			margin-bottom: 39px;
+			color: $text-light;
 		}
 		&-list {
 			list-style-type: none;
