--- a/coffee-house/style/menu.css
+++ b/coffee-house/style/menu.css
@@ -1,5 +1,12 @@
 /*Tags*/
+html,
 body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
   font-family: "Inter", sans-serif;
   font-size: 16px;
   line-height: 1.5;
@@ -41,7 +48,12 @@ img {
   box-sizing: border-box;
 }
 
+.push-footer {
+  flex-grow: 1;
+}
+
 .header {
+  width: 100%;
   padding: 20px 40px 0;
 }
 
