--- a/coffee-house/style/header.scss
+++ b/coffee-house/style/header.scss
@@ -18,22 +18,16 @@
 		list-style-type: none;
 		transform: translate(2px, -2px);
 	}
-	&-list__item, 
+	&-list__item,
 	&__btn-menu {
 		position: relative;
 		font-weight: 600;
 		color: $text-dark;
 		cursor: pointer;
-		&:hover, 
-		&:focus {
-			&::after {
-				opacity: 1;
-				transform: scaleX(1);
-			}
-		}
 		&::after {
 			position: absolute;
 			top: 26px;
+			left: 0;
 			display: block;
 			width: 100%;
 			height: 2px;
@@ -46,7 +40,6 @@
 		}
 	}
 	&__btn-menu {
-		cursor: pointer;
 		transform: translate(5px, -2px);
 		&-icon {
 			display: inline-block;
@@ -56,6 +49,64 @@
 			vertical-align: top;
 			background-image: url(../img/header_and_footer/coffee-cup.svg);
 			transform: translateX(-4px);
+		}
+	}
+	&-btn-mobile-equal,
+	&-btn-mobile-cross {
+		display: none;
+		width: 44px;
+		height: 44px;
+		border: 1px solid $border-dark;
+		border-radius: 100%;
+		transition: background-color 0.5s;
+		svg {
+			fill: transparent;
+			transform: translateY(-1px) scaleX(1.1);
+			transition: fill 0.5s;
+			path {
+				stroke: $text-dark;
+				transition: stroke 0.5s;
+			}
+		}
+	}
+	&-btn-mobile-cross {
+		svg {
+			transform: translateY(1px) scale(1.1);
+		}
+	}
+	&--mobile {
+		position: absolute;
+		top: 100px;
+		left: 0;
+		display: none;
+		flex-direction: column;
+		width: 100%;
+		padding: 60px 40px;
+		box-sizing: border-box;
+		background-color: $text-light;
+		z-index: 1;
+		.nav-list,
+		.nav__btn-menu {
+			font-size: 32px;
+			line-height: 1.25;
+			transform: translate(0px, 1px);
+		}
+		.nav-list {
+			flex-basis: 100%;
+			margin-bottom: 40px;
+			li {
+				margin-bottom: 60px;
+				text-align: center;
+			}
+		}
+		.nav__btn-menu {
+			margin-bottom: 324px;
+			&-icon {
+				width: 40px;
+				height: 40px;
+				background-image: url(../img/header_and_footer/coffee-cup-big.svg);
+				transform: translate(-1px, -1px);
+			}
 		}
 	}
 }
