--- a/coffee-house/style/index.scss
+++ b/coffee-house/style/index.scss
@@ -34,13 +34,6 @@
 			background-color: $text-light;
 			transition: padding 0.5s;
 			transform: translateX(-1px);
-			&:hover, 
-			&:focus {
-				padding: 20px 88px 20px 69px;
-				&::after {
-					opacity: 1;
-				}
-			}
 			&::after {
 				position: absolute;
 				left: 120px;
@@ -108,18 +101,8 @@
 				border-radius: 100px;
 				background-color: $border-light;
 				transition: background-color 0.5s;
-				&:hover, 
-				&:focus {
-					background-color: $border-dark;
-					cursor: pointer;
-				}
 				&--active {
 					background-color: $border-dark;
-					&:hover, 
-					&:focus {
-						user-select: none;
-						cursor: default;
-					}
 				}
 			}
 		}
@@ -137,12 +120,6 @@
 				path {
 					stroke: $text-dark;
 					transition: stroke 0.5s;
-				}
-				&:hover {
-					fill: $border-dark;
-					path {
-						stroke: $text-light;
-					}
 				}
 			}
 		}
@@ -207,10 +184,6 @@
 				max-width: 100%;
 				transition: transform 0.5s;
 				transform: translate(-50%,-50%) scale(1.1);
-				&:hover, 
-				&:focus {
-					transform: translate(-50%,-50%) scale(1);
-				}
 			}
 		}
 	}
@@ -252,12 +225,6 @@
 					fill: $text-dark;
 					transition: fill 0.5s;
 				}
-				&:hover {
-					fill: $border-dark;
-					path {
-						fill: $text-light;
-					}
-				}
 			}
 		}
 	}
@@ -276,7 +243,7 @@
 	background-image: url(../img/main/hero.jpg);
 	background-size: cover;
     background-repeat: no-repeat;
-    background-position: 0px -30px;
+	background-position: 50% 50%;
 }
 .about,
 .mobile-app {
