--- a/coffee-house/style/menu.css
+++ b/coffee-house/style/menu.css
@@ -33,9 +33,6 @@ button {
   line-height: 1;
   background-color: transparent;
 }
-button:hover {
-  cursor: pointer;
-}
 button:focus {
   outline: none;
 }
@@ -84,13 +81,10 @@ img {
   color: #403F3D;
   cursor: pointer;
 }
-.nav-list__item:hover::after, .nav-list__item:focus::after, .nav__btn-menu:hover::after, .nav__btn-menu:focus::after {
-  opacity: 1;
-  transform: scaleX(1);
-}
 .nav-list__item::after, .nav__btn-menu::after {
   position: absolute;
   top: 26px;
+  left: 0;
   display: block;
   width: 100%;
   height: 2px;
@@ -102,7 +96,6 @@ img {
   pointer-events: none;
 }
 .nav__btn-menu {
-  cursor: pointer;
   transform: translate(5px, -2px);
 }
 .nav__btn-menu-icon {
@@ -114,6 +107,61 @@ img {
   background-image: url(../img/header_and_footer/coffee-cup.svg);
   transform: translateX(-4px);
 }
+.nav-btn-mobile-equal, .nav-btn-mobile-cross {
+  display: none;
+  width: 44px;
+  height: 44px;
+  border: 1px solid #665F55;
+  border-radius: 100%;
+  transition: background-color 0.5s;
+}
+.nav-btn-mobile-equal svg, .nav-btn-mobile-cross svg {
+  fill: transparent;
+  transform: translateY(-1px) scaleX(1.1);
+  transition: fill 0.5s;
+}
+.nav-btn-mobile-equal svg path, .nav-btn-mobile-cross svg path {
+  stroke: #403F3D;
+  transition: stroke 0.5s;
+}
+.nav-btn-mobile-cross svg {
+  transform: translateY(1px) scale(1.1);
+}
+.nav--mobile {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  display: none;
+  flex-direction: column;
+  width: 100%;
+  padding: 60px 40px;
+  box-sizing: border-box;
+  background-color: #E1D4C9;
+  z-index: 1;
+}
+.nav--mobile .nav-list,
+.nav--mobile .nav__btn-menu {
+  font-size: 32px;
+  line-height: 1.25;
+  transform: translate(0px, 1px);
+}
+.nav--mobile .nav-list {
+  flex-basis: 100%;
+  margin-bottom: 40px;
+}
+.nav--mobile .nav-list li {
+  margin-bottom: 60px;
+  text-align: center;
+}
+.nav--mobile .nav__btn-menu {
+  margin-bottom: 324px;
+}
+.nav--mobile .nav__btn-menu-icon {
+  width: 40px;
+  height: 40px;
+  background-image: url(../img/header_and_footer/coffee-cup-big.svg);
+  transform: translate(-1px, -1px);
+}
 
 .footer {
   padding: 0 40px 40px;
@@ -121,7 +169,7 @@ img {
 
 .footerbox {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   box-sizing: content-box;
   padding: 100px 100px 94px;
   border-radius: 40px;
@@ -129,6 +177,7 @@ img {
 }
 .footerbox-desc {
   flex-basis: 530px;
+  margin-right: 100px;
 }
 .footerbox-desc__title {
   margin-bottom: 40px;
@@ -158,16 +207,8 @@ img {
   stroke: #E1D4C9;
   transition: stroke 0.5s;
 }
-.footerbox-desc-social__item svg:hover rect {
-  stroke: #E1D4C9;
-  fill: #E1D4C9;
-}
-.footerbox-desc-social__item svg:hover path {
-  stroke: #403F3D;
-}
 .footerbox-connect {
   flex-basis: 265px;
-  margin-right: 265px;
 }
 .footerbox-connect__title {
   margin-top: 33px;
@@ -185,10 +226,6 @@ img {
 }
 .footerbox-connect-list__address, .footerbox-connect-list__tel {
   position: relative;
-}
-.footerbox-connect-list__address:hover::after, .footerbox-connect-list__address:focus::after, .footerbox-connect-list__tel:hover::after, .footerbox-connect-list__tel:focus::after {
-  transform: scaleX(1);
-  opacity: 1;
 }
 .footerbox-connect-list__address::after, .footerbox-connect-list__tel::after {
   position: absolute;
