--- a/coffee-house/style/index.scss
+++ b/coffee-house/style/index.scss
@@ -50,7 +50,6 @@
 }
 
 .favorite-coffee {
-	position: relative;
 	&__title {
 		margin-bottom: 40px;
 		font-size: 60px;
@@ -62,6 +61,9 @@
 	&__subtitle {
 		font-variation-settings: 'slnt' -10;
 		color: $text-accent;
+	}
+	.slider-box {
+		position: relative;
 	}
 	.slider {
 		max-width: 480px;
@@ -109,7 +111,7 @@
 		&__btn-left, 
 		&__btn-right {
 			position: absolute;
-			top: 505px;
+			top: 290px;
 			height: 60px;
 			svg {
 				fill: transparent;
@@ -184,6 +186,11 @@
 				max-width: 100%;
 				transition: transform 0.5s;
 				transform: translate(-50%,-50%) scale(1.1);
+				/*
+					width: 688px;
+					height: 688px;
+					transform: translateY(-49px) scale(1.055);
+				*/
 			}
 		}
 	}
