--- a/coffee-house/style/media.scss
+++ b/coffee-house/style/media.scss
@@ -50,11 +50,9 @@
             }
         }
     }
-    .about .grid-item {
-        &__pic {
-            &:hover {
-                transform: translate(-50%,-50%) scale(1);
-            }
+    .about .grid-item__pic {
+        &:hover {
+            transform: translate(-50%,-50%) scale(1);
         }
     }
     .mobile-app .download-market {
@@ -322,6 +320,23 @@
             flex-basis: 468px;
             width: 468px;
             height: 468px;
+        }
+    }
+    .menu {
+        &-desc {
+            &__title {
+                font-size: 32px;
+            }
+        }
+        .grid {
+            &-coffee, 
+            &-tea, 
+            &-dessert {
+                grid-template-areas: "a"
+                                     "b"
+                                     "c"
+                                     "d";
+            }
         }
     }
     .footerbox-desc__title {
