--- a/coffee-house/style/media.scss
+++ b/coffee-house/style/media.scss
@@ -1,5 +1,4 @@
 @import "variables";
-//@media (hover: hover) and (pointer: fine) {
 @media (hover: hover) {
     button {
         &:hover {
@@ -127,17 +126,6 @@
     .about {
         padding-bottom: 0;
     }
-    .about .grid {
-        grid-template-areas: "a"
-                             "d";
-        justify-content: center;
-        &-item {
-            &-2, 
-            &-3 {
-                display: none;
-            }
-        }
-    }
     .menu .grid {
         &-coffee, 
         &-dessert {
@@ -199,27 +187,6 @@
     }
 }
 @media screen and (max-width: 835px) {
-    .nav {
-        &-list,
-        &__btn-menu {
-            display: none;
-        }
-        &-btn-mobile-equal {//бургер-меню
-            display: block;
-        }
-        &--mobile {
-            .nav-list,
-            .nav__btn-menu {
-                display: block;
-            }
-            .nav-list__item,
-            .nav__btn-menu {
-				&:hover::after { //заглушка на десктопе
-					opacity: 0;
-				}
-            }
-        }
-    }
     .favorite-coffee .slider {
         &__btn-left {
             left: 0px;
@@ -228,15 +195,10 @@
             right: 0px;
         }
     }
-    .about .grid {
-        &-item {
-            width: 688px;
-            &__pic {
-                transform: translate(-50%, -50%) scale(1.055);
-                width: 688px;
-                height: 688px;
-            }
-        }
+    .about .grid-item__pic {
+        transform: translate(-50%, -50%) scale(1.055);
+        width: 688px;
+        height: 688px;
     }
 }
 @media screen and (max-width: 817px) {
@@ -264,7 +226,41 @@
         }
     }
 }
-@media screen and (max-width: 784px) {
+@media screen and (max-width: 768px) {
+    .nav {
+        &-list,
+        &__btn-menu {
+            display: none;
+        }
+        &-btn-mobile-equal {//бургер-меню
+            display: block;
+        }
+        &--mobile {
+            .nav-list,
+            .nav__btn-menu {
+                display: block;
+            }
+            .nav-list__item,
+            .nav__btn-menu {
+				&:hover::after { //заглушка на десктопе
+					opacity: 0;
+				}
+            }
+        }
+    }
+    .about .grid {
+        grid-template-areas: "a"
+                             "d";
+        grid-template-columns: 1fr;
+        &-item {
+            &-2, 
+            &-3 {
+                display: none;
+            }
+        }
+    }
+}
+@media screen and (max-width: 767px) {
     .wrapper {
         padding-left: 16px;
         padding-right: 16px;
@@ -276,7 +272,7 @@
         &-desc {
             margin-left: 15px;
             &__title {
-                font-size: 42px;
+                font-size: 42px; //font-size: clamp(42px, 5vw, 72px);
                 line-height: 1.15;
             }
             &__text {
@@ -289,7 +285,7 @@
     }
     .favorite-coffee {
         &__title {
-            font-size: 32px;
+            font-size: 32px;//font-size: clamp(32px, 4vw, 60px);
         }
         .slider-box {
             .slider__btn-left,
@@ -306,9 +302,6 @@
         &__title {
             font-size: 32px;
         }
-        .grid-item {
-            width: 468px;
-        }
     }
     .mobile-app {
         .download {
@@ -323,10 +316,8 @@
         }
     }
     .menu {
-        &-desc {
-            &__title {
-                font-size: 32px;
-            }
+        &-desc__title {
+            font-size: 32px;
         }
         .grid {
             &-coffee, 
@@ -344,14 +335,6 @@
     }
 }
 @media screen and (max-width: 565px) {
-    .about .grid-item {
-        width: 348px;
-        &__pic {
-            width: 726px;
-            height: 726px;
-            transform: translate(-50%, -50%) scale(1);
-        }
-    }
     .mobile-app {
         .download {
             margin-bottom: 20px;
